# TreeHacks2026

./: .gitignore  INFINITE_LOOP_FIX_REPORT.md  OPENCASCADE_WASM_FIX.md  README.md  WASM_FIX_REPORT.md  ZOOM_FIX_SUMMARY.md  blueprint.html  blueprint_dimensions.json  glb_editor.py  index.html  package-lock.json  package.json  proxy.ts  requirements.txt  server.py  vite.config.js
backend/: agents.py  blueprint_agents.py  blueprint_server.py  models.py  openscad_docs.json  pyproject.toml  requirements.txt  server.py  test.py  test_blueprint.py
backend/preprocessing/: geometric_extraction.py  grounded_sam.py  main.py  modal_app.py  visual_tuner.py
backend/sessions/1c302e1d-a3c5-4432-835b-b9d343c0a7ae/: meta.json  model.scad  parameters.json  plan.json  response.json
backend/sessions/62ddf0fc-4dbe-4a27-9f4b-0738c5c44006/: meta.json  model.scad  parameters.json  plan.json  response.json
backend/sessions/6a2765d0-0b1c-468b-b9f0-a00b2c3adac3/: meta.json  model.scad  parameters.json  plan.json  response.json
backend/sessions/6cbd102a-14d3-4323-b3fd-21ea9970fd4d/: meta.json  model.scad  parameters.json  plan.json  response.json
backend/sessions/7844400a-9a83-4ce6-9a6f-b1ce8e0ea3a2/: meta.json  model.scad  parameters.json  plan.json  response.json
backend/sessions/7ba53176-218d-4600-b775-90483a476db6/: meta.json  model.scad  parameters.json  plan.json  response.json
backend/sessions/7d37f401-1bce-4788-8811-68675bc94232/: meta.json  model.scad  parameters.json  plan.json  response.json
backend/sessions/7f0c1ac8-9ee0-4ff1-94fa-eab583f837b3/: meta.json  model.scad  (+3 more)
(+180 files in other folders)
