[project]
name = "scadforge-backend"
version = "0.1.0"
description = "ScadForge Python backend using Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "pydantic",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
